# project_euler

./: 0001.c  0002.c  0003.c  0004.py  0005.py  0006.py  0007.py  0008.py  0009.py  0010.py  0011.py  0012.py  0013.py  0014.py  0015.py  0016.py  0017.py  0018.py  0019.py  0020.py  0022.py  0023.py  0054.py  README.md  p022_name.txt
IBM_Quantum/python_piscine/module_00/ex00/: answers.txt  requirements.txt  requirements_2.txt
IBM_Quantum/python_piscine/module_00/ex03/: count.py
IBM_Quantum/python_piscine/module_00/ex04/: operations.py
IBM_Quantum/python_piscine/module_00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
IBM_Quantum/python_piscine/module_00/ex07/: filterwords.py
IBM_Quantum/python_piscine/module_00/ex09/: guess.py
IBM_Quantum/python_piscine/module_00/ex10/: coloading.py  loading.py
IBM_Quantum/python_piscine/module_01/ex00/: book.py  recipe.py  test.py
IBM_Quantum/python_piscine/module_01/ex01/: game.py
IBM_Quantum/python_piscine/module_01/ex02/: test.py  vector.py
IBM_Quantum/python_piscine/module_01/ex03/: generator.py
IBM_Quantum/python_piscine/module_01/ex04/: eval.py
IBM_Quantum/python_piscine/module_02/ex04/: README.md  build.sh  pyproject.toml  setup.cfg
IBM_Quantum/python_piscine/module_02/ex04/src/my_minipack_fballest/: logger.py  my_minipack.py  progressbar.py
IBM_Quantum/python_piscine/module_02/ex04/src/test/: logger_test.py  progressbar_test.py
orbital/: a.out  philosophers.h
orbital/barber/: barber.h  barber.h.gch  barber_main  barber_main.c
orbital/information/: webs.txt
(+15 files in other folders)
