[build-system]
requires = [
    "pip>=23",
    "setuptools>=67",
    "wheel"
]
build-backend = "setuptools.build_meta"
[project]
name = "my_minipack"
version = "0.0.1"
authors = [
  { name="fballest", email="fballest@student.42madrid.com" },
]
description = "python piscine IBM package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
